--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ enable_testing()
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_subdirectory(src)
+add_subdirectory(samples)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
