--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,11 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "map": "cpp",
+        "string": "cpp",
+        "tuple": "cpp",
+        "vector": "cpp",
+        "xtree": "cpp"
     }
 }
