Refactored debugger code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,15 +1,15 @@
 
 set(SRCS
-    Bindings.cpp
-    Binary/Binary.cpp
-    Binary/BinaryPE.cpp
-    Binary/BinaryPE64.cpp
+    py_bindings.cpp
+    binary/Binary.cpp
+    binary/BinaryPE.cpp
+    binary/BinaryPE64.cpp
 )
 
 if (WIN32)
     set(SRCS
         ${SRCS}
-        DebuggerWin.cpp
+        debugger_win.cpp
     )
 
     pybind11_add_module(${PROJECT_NAME} ${SRCS})
