Implemented memory mapped files into binary files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ include(cmake/CompilerWarnings.cmake)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_subdirectory(extern/pybind11)
 add_subdirectory(src)
+add_subdirectory(sandbox)
 # add_subdirectory(samples)
+
+option(BUILD_LIBS "Build library" ON)
 
 target_compile_definitions(llama_debug PRIVATE VERSION_INFO=${EXAMPLE_VERSION_INFO})
 set_project_warnings(llama_debug)
