--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,5 @@
 
 set(SRCS
-    py_bindings.cpp
     binary/binary.cpp
     binary/binary_pe.cpp
     binary/binary_pe64.cpp
@@ -13,5 +12,6 @@ if (WIN32)
         debugger_win.cpp
     )
 
-    pybind11_add_module(${PROJECT_NAME} ${SRCS})
+    pybind11_add_module(${PROJECT_NAME} ${SRCS} py_bindings.cpp)
+    add_library(${PROJECT_NAME}_lib ${SRCS})
 endif() # WIN32
