Refactored binary folder structure.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
 
 set(SRCS
     binary/binary.cpp
-    binary/binary_pe.cpp
-    binary/binary_pe64.cpp
+    binary/pe/binary_pe.cpp
+    binary/pe/binary_pe64.cpp
     binary/mmap_file.cpp
 )
 
