--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SRCS
     binary/binary.cpp
     binary/pe/binary_pe.cpp
     binary/pe/dos_header.cpp
+    binary/pe/file_header.cpp
     binary/mmap_file.cpp
 )
 
