--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SRCS
     binary/pe/binary_pe.cpp
     binary/pe/dos_header.cpp
     binary/pe/file_header.cpp
+    binary/pe/optional_header.cpp
     binary/mmap_file.cpp
 )
 
