Created an abstract type for sections in a binary.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 set(SRCS
     binary/binary.cpp
     binary/mmap_file.cpp
+    binary/section.cpp
     binary/pe/binary_pe.cpp
     binary/pe/dos_header.cpp
     binary/pe/file_header.cpp
