Added better support for parsing import values.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SRCS
     binary/pe/dos_header.cpp
     binary/pe/file_header.cpp
     binary/pe/import_directory.cpp
+    binary/pe/import_entry.cpp
     binary/pe/optional_header.cpp
     binary/pe/section_header.cpp
 )
