--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,6 @@
         "xlocmes": "cpp",
         "xlocmon": "cpp",
         "xloctime": "cpp"
-    }
+    },
+    "editor.formatOnSave": true
 }
