Began adding parsing of binary files from processes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ set(BIN_SRCS
     binary/pe/pe_import_entry.cpp
     binary/pe/pe_optional_header.cpp
     binary/pe/pe_parser.cpp
+    binary/pe/pe_process_parser.cpp
     binary/pe/pe_resource_data_entry.cpp
     binary/pe/pe_resource_directory_entry.cpp
     binary/pe/pe_resource_directory.cpp
